# baynext-backend

./: .gitignore  pyproject.toml  requirements.txt
app/: job.py  main.py  models.py  security.py  settings.py  tasks.py
app/api/v1/: __init__.py
app/core/: security.py
app/routes/: __init__.py  health.py  run.py
app/schemas/: __init__.py  dataset.py  model.py
app/services/: __init__.py
app/validations/: job_parameters.py
tests/: test_settings.py
