[project]
name = "baynext-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-meridian>=1.0.8",
    "pydantic-settings>=2.9.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
]
